# kinematics-demo

./: .clang-format  .gitignore  App.cpp  App.h  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  kinematics.cpp  kinematics.h  main.cpp
bench/: CMakeLists.txt  main.cpp
cmake/: Sanitizers.gcc.cmake  Warnings.cmake  Warnings.gcc.cmake
gui/: App.cpp  App.h  CMakeLists.txt  main.cpp
kinematics/: CMakeLists.txt  OmpForSim.cpp  OmpSimdSim.cpp  ShaderSim.cpp  Simulation.cpp  StructOfAlignedSim.cpp  StructOfArraySim.cpp  StructOfOversizedSim.cpp  StructOfPointerSim.cpp  StructOfVectorSim.cpp  VectorOfStructSim.cpp  kinematics.cpp  kinematics.h
kinematics/include/: kinematics.h
minimal/: Aligned.cpp  Hybrid.cpp  Makefile  Oversized.cpp  StructOfPointer.cpp  StructOfVector.cpp  VectorOfLargeStruct.cpp  VectorOfStruct.cpp  make.sh
notes/kinematics/: OmpSimdSim.md  StructOfAlignedSim.md  StructOfArraySim.md  StructOfOversizedSim.md  StructOfPointerSim.md  StructOfVectorSim.md  VectorOfStructSim.md
notes/minimal/: Aligned.md  Hybrid.md  Oversized.md  StructOfPointer.md  StructOfVector.md  VectorOfLargeStruct.md  VectorOfStruct.md
shaders/: compute.glsl  fragment.glsl
videos/false-sharing/: CMakeLists.txt  Common.cmake  README.md
videos/false-sharing/01_local_points/: bench.cpp
videos/false-sharing/02_local_atomic_points/: bench.cpp
videos/false-sharing/03_global_atomic_points/: bench.cpp
videos/false-sharing/04_global_aligned_points/: bench.cpp
videos/false-sharing/05_global_aligned_point/: bench.cpp
videos/false-sharing/06_thread_local_points/: bench.cpp
videos/false-sharing/07_multiple_arrays/: CMakeLists.txt  bench.cpp
videos/lto/: CMakeLists.txt  CMakePresets.json  Common.cmake  README.md
videos/lto/01_aos/: CMakeLists.txt  Point.cpp  Point.hpp  bench.cpp  singleSource.cpp
videos/lto/02_large_structure/: CMakeLists.txt  Point.cpp  Point.hpp  bench.cpp
videos/lto/03_soa/: Points.cpp  Points.hpp  bench.cpp
videos/lto/04_hybrid/: CMakeLists.txt  Points.cpp  Points.hpp  bench.cpp
videos/lto/05_aligned/: Points.cpp  Points.hpp  bench.cpp
videos/simd/: 01_aos.cpp  02_large_structure.cpp  03_soa.cpp  04_hybrid.cpp  05_aligned.cpp  Makefile
